# flux

./: .gitignore  Dockerfile  Dockerfile.hpu  LICENSE  README.md  SECURITY.md  casa  demo_api.py  demo_fastapi.py  demo_gr.py  demo_hpu.py  demo_st.py  demo_st_fill.py  flux_handler.py  gAROTA  handler.py  pyproject.toml  questions.md  requirements.txt  setup.py  setup_flux.bat  trt_requirements.txt
.github/workflows/: ci.yaml  ci.yml  python-app.yml  vibe.yaml
docker/: Dockerfile  flux-cli.sh
docs/: fill.md  finetuning.md  image-editing.md  image-variation.md  structural-conditioning.md  text-to-image.md
model_cards/: FLUX.1-Krea-dev.md  FLUX.1-dev.md  FLUX.1-kontext-dev.md  FLUX.1-schnell.md
model_licenses/: LICENSE-FLUX1-dev  LICENSE-FLUX1-schnell
scripts/: analyze_steps_impact.py  flux_calib_production.sh  gen_flux_calib_data.py  test_calib_generation.py  test_calib_with_offload.py
src/flux/: __init__.py  __main__.py  _version.py  api.py  cli.py  cli_control.py  cli_fill.py  cli_kontext.py  cli_redux.py  content_filters.py  hpu_utils.py  math.py  model.py  sampling.py  util.py
src/flux/modules/: autoencoder.py  conditioner.py  image_embedders.py  layers.py  lora.py
src/flux/trt/: __init__.py  builders.py  trt_manager.py  wrappers.py
src/flux/trt/configs/: __init__.py  base.py
src/flux/trt/engine/: __init__.py  ae_engine.py  base_engine.py  clip_engine.py  flux_engine.py  t5_engine.py  transformer_engine.py  vae_engine.py
src/flux/trt/exporter/: __init__.py  base_exporter.py  clip_exporter.py  t5_exporter.py  transformer_exporter.py  utils_modelopt.py  vae_exporter.py
src/flux/trt/mixin/: __init__.py  ae_mixin.py  base_mixin.py  clip_mixin.py  flux_mixin.py  t5_mixin.py  transformer_mixin.py  vae_mixin.py
src/flux/trt/onnx_export/: __init__.py  ae_exporter.py  ae_wrapper.py  base_exporter.py  clip_exporter.py  clip_wrapper.py  flux_exporter.py  t5_exporter.py  transformer_exporter.py  utils_modelopt.py  vae_exporter.py
src/flux/trt/trt_config/: __init__.py  base_trt_config.py  clip_trt_config.py  t5_trt_config.py  transformer_trt_config.py  vae_trt_config.py
src/flux/trt/wrappers/: __init__.py  ae_wrapper.py  base_wrapper.py  clip_wrapper.py  engine.py  flux_wrapper.py  t5_wrapper.py  vae_wrapper.py
src/flux/trt/wrappers/engine/: base_wrapper.py
(+5 files in other folders)
